# quadform

./: .gitignore  README.md  pyproject.toml
quadform/: __init__.py  decomp.py
